Fix feed page align

--- a/feedpage/static/feedpage/partial.css
+++ b/feedpage/static/feedpage/partial.css
@@ -148,11 +148,6 @@
   text-align: center;
 }
 
-.contents.feed {
-  margin: 0;
-  width: 100%;
-}
-
 .contents.subs {
   display: flex;
   flex-flow: column;
